--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <p id="moneyEarned">0 Money</p>
     <button onclick="earnMoney()">Earn money</button>
+    <button onclick="increaseEarn()">Upgrade button</button>
     
     <script src="main.js" charset="utf-8" type="text/javascript"></script>
 </body>
