Upgrade price text

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <p id="moneyEarned">0 Money</p>
     <button onclick="earnMoney()">Earn money</button>
-    <button onclick="increaseEarn()">Upgrade button</button>
+    <button onclick="increaseEarn()" id="upgrade1">Upgrade button</button>
     
     <script src="main.js" charset="utf-8" type="text/javascript"></script>
 </body>
